--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "type": "git",
     "url": "https://github.com/g8up/quick-go-to-selected-file-path"
   },
-  "icon": "images/icon.png"
+  "icon": "images/icon.png",
+  "dependencies": {
+    "vsce": "^1.75.0"
+  }
 }
